removed redundant permission checks